--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -10,13 +10,28 @@ body{
   background-color: lightblue;
 }
 
-h1{
-  text-align: center;
-}
-
 .container{
   width: 50rem;
   border: 1px solid white;
   margin: 0 auto;
   background-color: white;
+  height: 20rem;
+  text-align: center;
+  padding: 20px;
+  border-radius: 20px;
+  display: flex;
+  flex-flow: column;
+  justify-content: center;
+}
+
+p{
+  font-size: 1.5rem;
+  color: grey;
+  padding: 2rem;
+}
+
+.center{
+  height: 100vh;
+  display: flex;
+  align-items: center;
 }
